--- a/KoketSite/app/design/frontend/shopper/default/layout/ajax.xml
+++ b/KoketSite/app/design/frontend/shopper/default/layout/ajax.xml
@@ -6,7 +6,7 @@
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>js</type><name>queldorei/jquery-1.8.2.min.js</name></action>
 			<action method="addJs" ifconfig="shoppersettings/ajax/cart"><script>queldorei/jquery.noconflict.js</script></action>
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/fancybox/jquery.fancybox-1.3.4.pack.js</name></action>
-            <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>
+            <!--<action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>-->
             <action method="addCss" ifconfig="shoppersettings/ajax/cart"><stylesheet>js/fancybox/jquery.fancybox-1.3.4.css</stylesheet></action>
         </reference>
     </cms_page>
@@ -16,7 +16,7 @@
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>js</type><name>queldorei/jquery-1.8.2.min.js</name></action>
 			<action method="addJs" ifconfig="shoppersettings/ajax/cart"><script>queldorei/jquery.noconflict.js</script></action>
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/fancybox/jquery.fancybox-1.3.4.pack.js</name></action>
-            <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>
+            <!--<action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>-->
             <action method="addCss" ifconfig="shoppersettings/ajax/cart"><stylesheet>js/fancybox/jquery.fancybox-1.3.4.css</stylesheet></action>
         </reference>
     </catalog_category_default>
@@ -26,7 +26,7 @@
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>js</type><name>queldorei/jquery-1.8.2.min.js</name></action>
 			<action method="addJs" ifconfig="shoppersettings/ajax/cart"><script>queldorei/jquery.noconflict.js</script></action>
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/fancybox/jquery.fancybox-1.3.4.pack.js</name></action>
-            <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>
+            <!--<action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>-->
             <action method="addCss" ifconfig="shoppersettings/ajax/cart"><stylesheet>js/fancybox/jquery.fancybox-1.3.4.css</stylesheet></action>
         </reference>
     </catalog_category_layered>
@@ -36,7 +36,7 @@
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>js</type><name>queldorei/jquery-1.8.2.min.js</name></action>
 			<action method="addJs" ifconfig="shoppersettings/ajax/cart"><script>queldorei/jquery.noconflict.js</script></action>
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/fancybox/jquery.fancybox-1.3.4.pack.js</name></action>
-            <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>
+            <!--<action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>-->
             <action method="addCss" ifconfig="shoppersettings/ajax/cart"><stylesheet>js/fancybox/jquery.fancybox-1.3.4.css</stylesheet></action>
         </reference>
     </catalogsearch_advanced_result>
@@ -46,7 +46,7 @@
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>js</type><name>queldorei/jquery-1.8.2.min.js</name></action>
 			<action method="addJs" ifconfig="shoppersettings/ajax/cart"><script>queldorei/jquery.noconflict.js</script></action>
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/fancybox/jquery.fancybox-1.3.4.pack.js</name></action>
-            <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>
+            <!--<action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>-->
             <action method="addCss" ifconfig="shoppersettings/ajax/cart"><stylesheet>js/fancybox/jquery.fancybox-1.3.4.css</stylesheet></action>
         </reference>
     </catalogsearch_result_index>
@@ -56,7 +56,7 @@
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>js</type><name>queldorei/jquery-1.8.2.min.js</name></action>
 			<action method="addJs" ifconfig="shoppersettings/ajax/cart"><script>queldorei/jquery.noconflict.js</script></action>
             <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/fancybox/jquery.fancybox-1.3.4.pack.js</name></action>
-            <action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>
+            <!--<action method="addItem" ifconfig="shoppersettings/ajax/cart"><type>skin_js</type><name>js/ajaxcart/ajaxcart.js</name></action>-->
             <action method="addCss" ifconfig="shoppersettings/ajax/cart"><stylesheet>js/fancybox/jquery.fancybox-1.3.4.css</stylesheet></action>
         </reference>
     </tag_product_list>
