--- a/KoketSite/app/locale/nl_NL/template/email/sales/invoice_new.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/invoice_new.html
@@ -78,7 +78,7 @@
                                                             </p>
 
                                                             <p>
-                                                                Hierbij sturen we je onze factuur na.<br>
+                                                                Hierbij sturen we je onze factuur.<br>
                                                                 Wij horen het graag als je nog vragen hebt. Aarzel niet ons te contacteren via <a
                                                                     href="mailto:{{config path=" trans_email/ident_general/email"}}"
                                                                 style="color:#1E7EC8;">{{config path="trans_email/ident_general/email"}}</a> of telefonisch
