--- a/KoketSite/app/locale/nl_NL/template/email/sales/invoice_new_guest.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/invoice_new_guest.html
@@ -206,7 +206,7 @@
                             </p>
 
                             <p>
-                                Hierbij sturen we je onze factuur na.<br>
+                                Hierbij sturen we je onze factuur.<br>
                                 Wij horen het graag als je nog vragen hebt. Neem dan gerust contact op via <a
                                     href="mailto:{{config path=" trans_email/ident_general/email"}}"
                                 style="color:#1E7EC8;">{{config path="trans_email/ident_general/email"}}</a> of telefonisch
