--- a/KoketSite/app/design/frontend/shopper/koket/template/page/html/header.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/page/html/header.phtml
@@ -37,7 +37,14 @@ if ( $config['design']['below_logo'] ) {
 
 ?>
 
-<!-- HEADER BOF -->
+<!--[if lte IE 9]>
+<div class="old-browser-notice">
+    Opgelet! Je gebruikt een oude internet browser, waardoor je surfervaring niet optimaal zal zijn. <br/>
+    <a href="http://browsehappy.com/">Download een recente browser</a> en surf opnieuw op de hoogste golven ;-)
+</div>
+<![endif]-->
+
+    <!-- HEADER BOF -->
 <div class="header-container">
     <div class="top-switch-bg">
         <div class="row clearfix">
