--- a/KoketSite/design/frontend/base/default/template/email/order/shipment/track.phtml
+++ b/KoketSite/design/frontend/base/default/template/email/order/shipment/track.phtml
@@ -27,7 +27,7 @@
 <?php $_shipment=$this->getShipment() ?>
 <?php $_order=$this->getOrder() ?>
 <?php if ($_shipment && $_order && $_shipment->getAllTracks()): ?>
-<table cellspacing="0" cellpadding="0" border="0" width="650" style="border:1px solid #EAEAEA;">
+<table cellspacing="0" cellpadding="0" border="0" width="100%" style="border:1px solid #EAEAEA;">
     <thead>
         <tr>
             <th align="left" bgcolor="#EAEAEA" style="font-size:13px; padding:3px 9px"><?php echo $this->__('Shipped By') ?></th>
