bug fix insecure checkout page due to links to http in stead of https

--- a/KoketSite/design/frontend/base/default/template/opc/customer/form/forgotpassword.phtml
+++ b/KoketSite/design/frontend/base/default/template/opc/customer/form/forgotpassword.phtml
@@ -1,4 +1,4 @@
-<form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate-email" style="display:none">
+<form action="<?php echo $this->getUrl('*/*/forgotpasswordpost', array("_secure"=>true)) ?>" method="post" id="form-validate-email" style="display:none">
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>    
        
         <p><?php echo $this->__('Please enter your email address below. You will receive a link to reset your password.') ?></p>
