script to import newsletter subscribers

--- a/KoketSite/skin/frontend/base/default/css/rewardpointsbehavior/behavior.css
+++ b/KoketSite/skin/frontend/base/default/css/rewardpointsbehavior/behavior.css
@@ -31,7 +31,8 @@
 #fb-send-id-behavior span{
     vertical-align:baseline !important;
 }
-#___plusone_0, #___plusone_0 iframe{
-    width: 71px !important;
-    padding-right: 2px !important;
-}
+
+/*#___plusone_0, #___plusone_0 iframe{*/
+    /*width: 71px !important;*/
+    /*padding-right: 2px !important;*/
+/*}*/
