--- a/KoketSite/app/design/frontend/shopper/koket/template/giftmessage/inline.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/giftmessage/inline.phtml
@@ -110,29 +110,13 @@ billing.onSave = function(evt){
     <div class="gift-messages-form" id="allow-gift-message-container">
         <div class="inner-box">
             <?php if ($this->isMessagesAvailable()): ?>
-                <h4><?php echo $this->__('Gift Options for the Entire Order.'); ?></h4>
-                <p>
-                    <input type="checkbox" name="allow_gift_messages_for_order" id="allow_gift_messages_for_order" value="1" onclick="toogleVisibilityOnObjects(this, ['allow-gift-messages-for-order-container']);"<?php if($this->getEntityHasMessage()): ?> checked="checked"<?php endif; ?> class="checkbox" />
-                    <label for="allow_gift_messages_for_order"><?php echo $this->__('Add gift options for the Entire Order') ?></label>
-                </p>
-                <div class="allow-gift-messages-for-order-container" id="allow-gift-messages-for-order-container" style="display:none">
-                    <p><?php echo $this->__('You can leave this box blank if you do not wish to add a gift message for whole order.') ?></p>
+                <h4>titel hier</h4>
+                <input type="checkbox" name="allow_gift_messages_for_order" id="allow_gift_messages_for_order" value="1" onclick="toogleVisibilityOnObjects(this, ['allow-gift-messages-for-order-container']);"<?php if($this->getEntityHasMessage()): ?> checked="checked"<?php endif; ?> class="checkbox" />
+                <div class="allow-gift-messages-for-order-container" id="allow-gift-messages-for-order-container">
                     <input type="hidden" name="giftmessage[<?php echo $this->getEntity()->getId() ?>][type]"  value="quote" />
                     <ul class="form-list">
-                        <li class="fields">
-                            <div class="field">
-                                <label for="gift-message-whole-from"><?php echo $this->__('From') ?></label>
-                                <div class="input-box">
-                                    <input type="text" name="giftmessage[<?php echo $this->getEntity()->getId() ?>][from]" id="gift-message-whole-from" title="<?php echo $this->__('From') ?>"  value="<?php echo $this->getEscaped($this->getMessage()->getSender(), $this->getDefaultFrom()) ?>" class="input-text validation-passed" />
-                                </div>
-                            </div>
-                            <div class="field">
-                                <label for="gift-message-whole-to"><?php echo $this->__('To') ?></label>
-                                <div class="input-box">
-                                    <input type="text" name="giftmessage[<?php echo $this->getEntity()->getId() ?>][to]" id="gift-message-whole-to" title="<?php echo $this->__('To') ?>" value="<?php echo $this->getEscaped($this->getMessage()->getRecipient(), $this->getDefaultTo()) ?>" class="input-text validation-passed" />
-                                </div>
-                            </div>
-                        </li>
+                        <input type="hidden" name="giftmessage[<?php echo $this->getEntity()->getId() ?>][from]" id="gift-message-whole-from" title="<?php echo $this->__('From') ?>"  value="<?php echo $this->getEscaped($this->getMessage()->getSender(), $this->getDefaultFrom()) ?>" class="input-text validation-passed" />
+                        <input type="hidden" name="giftmessage[<?php echo $this->getEntity()->getId() ?>][to]" id="gift-message-whole-to" title="<?php echo $this->__('To') ?>" value="<?php echo $this->getEscaped($this->getMessage()->getRecipient(), $this->getDefaultTo()) ?>" class="input-text validation-passed" />
                         <li class="wide">
                             <label for="gift-message-whole-message"><?php echo $this->__('Message') ?></label>
                             <div class="input-box">
@@ -147,69 +131,14 @@ billing.onSave = function(evt){
                     </script>
                 </div>
              <?php endif; ?>
-             <?php if($this->isItemsAvailable()): ?>
-                 <h4><?php echo $this->__('Gift Options for Individual Items'); ?></h4>
-                 <p>
-                    <input type="checkbox" name="allow_gift_messages_for_items" id="allow_gift_messages_for_items" value="1" onclick="toogleVisibilityOnObjects(this, ['allow-gift-messages-for-items-container']);"<?php if($this->getItemsHasMesssages()): ?> checked="checked"<?php endif; ?> class="checkbox" />
-                    <label for="allow_gift_messages_for_items"><?php echo $this->__('Add gift options for Individual Items') ?></label>
-                </p>
-                <div id="allow-gift-messages-for-items-container">
-                 <p><?php echo $this->__('You can leave this box blank if you do not wish to add a gift message for the item.') ?></p>
-                 <ol>
-                 <?php foreach($this->getItems() as $_index=>$_item): ?>
-                 <?php $_product=$_item->getProduct() ?>
-                 <li class="item">
-                     <div class="product-img-box">
-                         <p class="product-image">
-                             <img src="<?php echo $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(75); ?>" width="75" height="75" alt="<?php echo $this->escapeHtml($_product->getName()) ?>" title="<?php echo $this->escapeHtml($_product->getName()) ?>" />
-                         </p>
-                         <p class="number"><?php echo $this->__('Item %d of %d', $_index+1, $this->countItems()) ?></p>
-                     </div>
-                     <div class="details">
-                         <div class="f-fix">
-                             <h5 class="product-name"><?php echo $this->escapeHtml($_product->getName()) ?></h5>
-                             <input type="hidden" name="giftmessage[<?php echo $_item->getId() ?>][type]" value="quote_item" />
-                              <ul class="form-list">
-                                 <li class="fields">
-                                     <div class="field">
-                                         <label for="gift-message-<?php echo $_item->getId() ?>-from"><?php echo $this->__('From') ?></label>
-                                         <div class="input-box">
-                                             <input type="text" name="giftmessage[<?php echo $_item->getId() ?>][from]" id="gift-message-<?php echo $_item->getId() ?>-from" title="<?php echo $this->__('From') ?>" value="<?php echo $this->getEscaped($this->getMessage($_item)->getSender(), $this->getDefaultFrom()) ?>" class="input-text validation-passed" />
-                                         </div>
-                                     </div>
-                                     <div class="field">
-                                         <label for="gift-message-<?php echo $_item->getId() ?>-to"><?php echo $this->__('To') ?></label>
-                                         <div class="input-box">
-                                             <input type="text" name="giftmessage[<?php echo $_item->getId() ?>][to]" id="gift-message-<?php echo $_item->getId() ?>-to" title="<?php echo $this->__('To') ?>" value="<?php echo $this->getEscaped($this->getMessage($_item)->getRecipient(), $this->getDefaultTo()) ?>" class="input-text validation-passed" />
-                                         </div>
-                                     </div>
-                                 </li>
-                                 <li class="wide">
-                                     <label for="gift-message-<?php echo $_item->getId() ?>-message"><?php echo $this->__('Message') ?></label>
-                                     <div class="input-box">
-                                         <textarea id="gift-message-<?php echo $_item->getId() ?>-message" onchange="toogleRequired('gift-message-<?php echo $_item->getId() ?>-message', ['gift-message-<?php echo $_item->getId() ?>-from','gift-message-<?php echo $_item->getId() ?>-to'])" class="input-text validation-passed giftmessage-area" name="giftmessage[<?php echo $_item->getId() ?>][message]" title="<?php echo $this->__('Message') ?>" rows="5" cols="40"><?php echo $this->getEscaped($this->getMessage($_item)->getMessage()) ?></textarea>
-                                     </div>
-                                 </li>
-                             </ul>
-                             <script type="text/javascript">
-                             //<![CDATA[
-                                toogleRequired('gift-message-<?php echo $_item->getId() ?>-message', ['gift-message-<?php echo $_item->getId() ?>-from','gift-message-<?php echo $_item->getId() ?>-to']);
-                             //]]>
-                             </script>
-                         </div>
-                     </div>
-                 </li>
-                 <?php endforeach; ?>
-             </ol>
-             </div>
-             <?php endif; ?>
+
         </div>
     </div>
     <script type="text/javascript">
     //<![CDATA[
         toogleVisibilityOnObjects('allow_gift_messages', ['allow-gift-message-container']);
-        toogleVisibilityOnObjects('allow_gift_messages_for_order', ['allow-gift-messages-for-order-container']);
-        toogleVisibilityOnObjects('allow_gift_messages_for_items', ['allow-gift-messages-for-items-container']);
+        //toogleVisibilityOnObjects('allow_gift_messages_for_order', ['allow-gift-messages-for-order-container']);
+        //toogleVisibilityOnObjects('allow_gift_messages_for_items', ['allow-gift-messages-for-items-container']);
     //]]>
     </script>
 <?php break; ?>
