--- a/KoketSite/app/design/frontend/shopper/koket/template/page/html/footer.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/page/html/footer.phtml
@@ -28,6 +28,20 @@ $appearance = Mage::getStoreConfig('shoppersettings/appearance', Mage::app()->ge
 $route = Mage::app()->getFrontController()->getRequest()->getRouteName();
 $action = Mage::app()->getFrontController()->getRequest()->getActionName();
 ?>
+
+<script type="text/javascript">
+    /* Lazy Load XT 1.0.6 | MIT License */
+    !function(a,b,c,d){function e(a,b){return a[b]===d?t[b]:a[b]}function f(){var a=b.pageYOffset;return a===d?r.scrollTop:a}function g(a,b){var c=t["on"+a];c&&(w(c)?c.call(b[0]):(c.addClass&&b.addClass(c.addClass),c.removeClass&&b.removeClass(c.removeClass))),b.trigger("lazy"+a,[b]),k()}function h(b){g(b.type,a(this).off(p,h))}function i(c){if(A.length){c=c||t.forceLoad,B=1/0;var d,e,i=f(),j=b.innerHeight||r.clientHeight,k=b.innerWidth||r.clientWidth;for(d=0,e=A.length;e>d;d++){var l,m=A[d],o=m[0],q=m[n],s=!1,u=c;if(z(r,o)){if(c||!q.visibleOnly||o.offsetWidth||o.offsetHeight){if(!u){var v=o.getBoundingClientRect(),x=q.edgeX,y=q.edgeY;l=v.top+i-y-j,u=i>=l&&v.bottom>-y&&v.left<=k+x&&v.right>-x}if(u){g("show",m);var C=q.srcAttr,D=w(C)?C(m):o.getAttribute(C);D&&(m.on(p,h),o.src=D),s=!0}else B>l&&(B=l)}}else s=!0;s&&(A.splice(d--,1),e--)}e||g("complete",a(r))}}function j(){C>1?(C=1,i(),setTimeout(j,t.throttle)):C=0}function k(a){A.length&&(a&&"scroll"===a.type&&a.currentTarget===b&&B>=f()||(C||setTimeout(j,0),C=2))}function l(){v.lazyLoadXT()}function m(){i(!0)}var n="lazyLoadXT",o="lazied",p="load error",q="lazy-hidden",r=c.documentElement||c.body,s=b.onscroll===d||!!b.operamini||!r.getBoundingClientRect,t={autoInit:!0,selector:"img[data-src]",blankImage:"data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7",throttle:99,forceLoad:s,loadEvent:"pageshow",updateEvent:"load orientationchange resize scroll touchmove focus",forceEvent:"",oninit:{removeClass:"lazy"},onshow:{addClass:q},onload:{removeClass:q,addClass:"lazy-loaded"},onerror:{removeClass:q},checkDuplicates:!0},u={srcAttr:"data-src",edgeX:0,edgeY:0,visibleOnly:!0},v=a(b),w=a.isFunction,x=a.extend,y=a.data||function(b,c){return a(b).data(c)},z=a.contains||function(a,b){for(;b=b.parentNode;)if(b===a)return!0;return!1},A=[],B=0,C=0;a[n]=x(t,u,a[n]),a.fn[n]=function(c){c=c||{};var d,f=e(c,"blankImage"),h=e(c,"checkDuplicates"),i=e(c,"scrollContainer"),j={};a(i).on("scroll",k);for(d in u)j[d]=e(c,d);return this.each(function(d,e){if(e===b)a(t.selector).lazyLoadXT(c);else{if(h&&y(e,o))return;var i=a(e).data(o,1);f&&"IMG"===e.tagName&&!e.src&&(e.src=f),i[n]=x({},j),g("init",i),A.push(i)}})},a(c).ready(function(){g("start",v),v.on(t.loadEvent,l).on(t.updateEvent,k).on(t.forceEvent,m),a(c).on(t.updateEvent,k),t.autoInit&&l()})}(window.jQuery||window.Zepto||window.$,window,document),function(a){var b=a.lazyLoadXT;b.selector+=",video,iframe[data-src]",b.videoPoster="data-poster",a(document).on("lazyshow","video",function(c,d){var e=d.lazyLoadXT.srcAttr,f=a.isFunction(e);d.attr("poster",d.attr(b.videoPoster)).children("source,track").each(function(b,c){var d=a(c);d.attr("src",f?e(d):d.attr(e))}),this.load()})}(window.jQuery||window.Zepto||window.$);
+    jQuery.lazyLoadXT.onload = function(){
+        //load twitter widget
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+        //load G+ widget
+        gapi.page.go();
+        //hide tmp link
+        jQuery("#google-plus-link").hide();
+    }
+</script>
+
 <!-- footer BOF -->
 <div class="footer-container">
     <?php if ( !($route == 'customer' && ($action == 'login' || $action == 'forgotpassword' || $action == 'create')) ) : ?>
@@ -47,10 +61,8 @@ $action = Mage::app()->getFrontController()->getRequest()->getActionName();
             <div class="grid_3">
             <?php if ( empty($config['facebook_replace']) ) { ?>
                 <h4><?php echo $this->__('Facebook');?></h4>
-                <div class="block-content">
-                <!--<iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2F<?php echo $config['facebook'] ?>&amp;width=270&amp;show_faces=true&amp;colorscheme=light&amp;stream=false&amp;show_border=false&amp;header=false" scrolling="no" frameborder="0" allowTransparency="true"></iframe>-->
-<!--                    <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2F--><?php //echo $config['facebook'] ?><!--&amp;width=270&amp;height=315&amp;colorscheme=light&amp;show_faces=true&amp;header=false&amp;stream=true&amp;show_border=false&amp;appId=135393246649432" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:558px;" allowTransparency="true"></iframe>-->
-                    <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FKoketteKatinka&amp;width=270&amp;height=558&amp;colorscheme=light&amp;show_faces=true&amp;header=false&amp;stream=true&amp;show_border=false&amp;appId=135393246649432" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:270px; height:558px;" allowTransparency="true"></iframe>
+                <div class="block-content" style="background-color: white;padding: 10px 14px;">
+                    <iframe id="facebook-badge" data-src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FKoketteKatinka&amp;width=270&amp;height=558&amp;colorscheme=light&amp;show_faces=true&amp;header=false&amp;stream=true&amp;show_border=false&amp;appId=135393246649432" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
                 </div>
             <?php } else {
                 $cms_block = Mage::getModel('cms/block')
@@ -63,40 +75,16 @@ $action = Mage::app()->getFrontController()->getRequest()->getActionName();
             </div>
 
             <div class="grid_3">
-            <h4>Google+</h4>
-            <div class="block-content">
-                <!-- Place this tag where you want the widget to render. -->
-                <div class="g-page" data-width="230" data-height="558" data-href="https://plus.google.com/113396184356059999933" data-rel="publisher"></div>
+                <h4>Twitter</h4>
+                <div id="twitter-badge" class="block-content" >
+                    <a class="twitter-timeline" href="https://twitter.com/Kokette_Katinka" data-widget-id="564075292860612608">Tweets van @Kokette_Katinka</a>
+                </div>
 
-                <!-- Place this tag after the last widget tag. -->
-                <script type="text/javascript">
-                    window.___gcfg = {lang: 'nl'};
-
-                    (function() {
-                        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-                        po.src = 'https://apis.google.com/js/platform.js';
-                        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-                    })();
-                </script>
-            </div>
-            <script type="text/javascript">
-                var el = {
-                        widget				: jQuery('.twitterWidget'),
-                        twitterList			: jQuery('.twitterWidget').find(".twitterList")
-                    },
-                    utils	= {
-                        username		: el.widget.data("user"),
-                        currentIndex	: 0,
-                        callback		: function(){},
-                        isReady			: false,
-                        height			: 0,
-                        text_specify    : "<?php echo $this->__('You need to specify a username');?>",
-                        text_error      : "<?php echo $this->__('There was an error connecting to your Twitter account');?>",
-                        text_follow     : "<?php echo $this->__('Follow us');?>",
-                        text_on_twitter : "<?php echo $this->__('on Twitter');?>"
-                    }
-                getTweets(el, utils);
-            </script>
+                <h4 style="padding-top: 10px; margin-bottom: 4px;">Google+</h4>
+                <div id="google-badge" class="block-content">
+                    <div  class="g-page" data-href="https://plus.google.com/113396184356059999933" data-layout="landscape" data-rel="publisher"></div>
+                    <a id="google-plus-link" href="https://plus.google.com/u/0/+KokettekatinkaBeAntwerpen/">Google+ Page</a>
+                </div>
             </div>
             <div class="grid_3 information">
 	            <?php $cms_block = Mage::getModel('cms/block')
