--- a/KoketSite/app/locale/nl_NL/template/email/newsletter_subscr_success.html
+++ b/KoketSite/app/locale/nl_NL/template/email/newsletter_subscr_success.html
@@ -56,6 +56,9 @@
 
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
                                                             <p>Je bent succesvol aangemeld voor onze nieuwsbrief.</p>
+                                                            <p>We houden je op de hoogte van nieuwtjes en acties in onze winkel en webshop.
+                                                                </p>
+                                                            <p>Je kan op elk moment uitschrijven via je <a href="https://www.kokettekatinka.be/customer/account/">online account</a>, onder <a href="https://www.kokettekatinka.be/newsletter/manage/"> Nieuwsbrief</a>.</p>
                                                             <p>Bedankt voor je interesse en tot ziens in onze winkel of op onze webshop!</p>
                                                             <!-- // END BODY 1 ---------------------------------------------- -->
 
