--- a/KoketSite/app/design/frontend/base/default/template/catalog/product/view/tierprices.phtml
+++ b/KoketSite/app/design/frontend/base/default/template/catalog/product/view/tierprices.phtml
@@ -165,7 +165,7 @@ if (Mage::helper('weee')->typeOfDisplay($_product, array(1,2,4))) {
                         <?php endif; ?>
                         <?php echo $this->__('each') ?>
                 <?php elseif(Mage::helper('weee')->typeOfDisplay($_product, 2)): ?>
-                        <?php echo $this->__('Buy %1$s for %2$s', $_price['price_qty'], $_price['formated_price']); ?>
+                        <?php echo "-" & $this->__('Buy %1$s for %2$s', $_price['price_qty'], $_price['formated_price']); ?>
                         <?php if ($_weeeTaxAttributes): ?>
                         (<small>
                         <?php foreach ($_weeeTaxAttributes as $_attribute): ?>
