--- a/KoketSite/app/design/frontend/shopper/default/template/customer/form/login.phtml
+++ b/KoketSite/app/design/frontend/shopper/default/template/customer/form/login.phtml
@@ -50,10 +50,11 @@
                         <form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form">
                         <?php echo $this->getBlockHtml('formkey'); ?>
                             <ul class="form-list">
+                                <input type="hidden" name="form_key" value="<?php echo Mage::getSingleton('core/session')->getFormKey(); ?>" />
                                 <li>
                                     <label for="email" class="required"><em>*</em><?php echo $this->__('Email Address') ?></label>
                                     <div class="input-box">
-                                        <input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
+                                        <input type="email" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
                                     </div>
                                 </li>
                                 <li>
@@ -78,10 +79,11 @@
                     <div class="block-content">
                         <form action="<?php echo $this->getUrl('*/*/forgotpasswordpost') ?>" method="post" id="form-validate">
                             <ul class="form-list">
+                                <input type="hidden" name="form_key" value="<?php echo Mage::getSingleton('core/session')->getFormKey(); ?>" />
                                 <li>
                                     <label for="email" class="required"><?php echo $this->__('Email Address') ?></label>
                                     <div class="input-box">
-                                        <input type="text" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?php echo $this->htmlEscape($this->getEmailValue()) ?>" />
+                                        <input type="email" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?php echo $this->htmlEscape($this->getEmailValue()) ?>" />
                                     </div>
                                 </li>
                                 <?php echo $this->getChildHtml('form.additional.info'); ?>
