--- a/KoketSite/app/design/frontend/shopper/koket/template/customer/form/forgotpassword.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/customer/form/forgotpassword.phtml
@@ -49,7 +49,7 @@
                                 <li>
                                     <label for="email" class="required"><?php echo $this->__('Email Address') ?></label>
                                     <div class="input-box">
-                                        <input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
+                                        <input type="email" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
                                     </div>
                                 </li>
                                 <li>
@@ -94,7 +94,7 @@
                                 <li>
                                     <label for="email" class="required"><?php echo $this->__('Email Address') ?></label>
                                     <div class="input-box">
-                                        <input type="text" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?php echo $this->htmlEscape($this->getEmailValue()) ?>" />
+                                        <input type="email" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?php echo $this->htmlEscape($this->getEmailValue()) ?>" />
                                     </div>
                                 </li>
                                 <?php echo $this->getChildHtml('form.additional.info'); ?>
